# student

./: README.md  ascii.md  bitwise-operations.md  recursive-factorial.scm  stack-object.rkt  utf-8.md  variadic-sum.py
30jun2021-scheme/: scheme-syntax.scm
c-lang/: README.md
css/: flexbox.org  grid.org
curry/: README.md  curry.js  curry.py  curry.scm
generators/: generator.rkt
geometry/: README.md
geometry/haskell/: .gitignore  euclid.cabal  haskell.cabal
geometry/haskell/src/: Euclid.hs  Matrices.hs  Shapes.hs  Utils.hs  Vectors.hs
geometry/haskell/src/Vectors/: Vec2.hs  Vec3.hs
golang/: README.md  append.org  interfaces.org
haskell/: gofer-prelude.org  lazy-evaluation.md  lazy-evaluation.org
inside-scheme/: README.md  count-nodes.scm  define-map.scm  factorial-iter.scm  named-let.scm  traverse-tree.scm
javascript/: README.md  clone_deep.js  objectcreate-polyfill.js  weakmap-lock.js
julia/: README.md  constructors.jl
lambda-calculus/: README.md  church-encoding.scm
map-list/: map-list.js  map-list.py  map-list.scm
map-test/: map-test.js  map-test.py  map-test.rb  map-test.scm
notes/: ascii.md  automata-theory.md  bitwise-add-subtract.md  bitwise-operations.md  code-guide.org  combinators.md  conditionals.md  de-morgans-laws.md  derivatives.org  factorial.md  factorial.org  gcd.md  hutton-func-parse.md  hutton-functional-parsing.md  joy.md  lambda-calculus.org  lambda.org  mini-pratt-parser.md  parse-infix.md  peg-parsing.org  pratt-parser-crockford.md  precedence-crockford.md  quicksort.md  re-derivatives.org  recursion.md  sorting.org  (+6 more)
(+765 files in other folders)
