cabal-version:      2.4
name:               euclid
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: A 2D and 3D vector-graphics library.
-- A longer description of the package.
description: Contains geometric primitives for building vector graphics.

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jared Clarke
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Euclid

    -- Modules included in this library but not exported.
    other-modules: Vectors

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   src
    default-language: Haskell2010
